<?xml version="1.0"?>
<package format="2">
  <name>lidar_pcl_tutorial</name>
  <version>1.0.0</version>
  <description>The lidar pcl tutorial package</description>

  <maintainer email="stkimjh@kaist.ac.kr">ME492</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>


  <export>

  </export>
</package>
